--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "antd": "^4.16.13",
+    "aos": "^2.3.4",
     "axios": "^0.21.4",
     "plyr-react": "^3.2.0",
     "react": "^17.0.2",
